--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -110,7 +110,7 @@ In the meantime, our findings imply that while large canopy trees are the most v
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
 Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC REF), accompanied by increasing severity and frequency of heat waves [@perkinsIncreasingFrequencyIntensity2012] and hotter droughts [*Trenberth et al. 2014*].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities], foliar damage during heat waves [*O'Sullivan et al. 2017*], and reduced growth and elevated mortality during drought [REFS].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities].
 Individually or in combination, these changes have the potential to reduce forest C sequestration, as may already be occurring in some forests [REFS; @sullivanLongtermThermalSensitivity2020]. 
 The resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
  
@@ -161,26 +161,26 @@ In this review, we focus primarily on growing season conditions, including leaf 
 Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. Foliage density mediates light regime, where denser upper canopies exposed to greater PAR values limit light to canopy interiors, lower canopy layers, and the understory. 
 This light gradient is more pronounced under broadleaf forests than needleleaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @vonarxSpatiotemporalEffectsForest2012a; @poorterMetaanalysisPlantResponses2019b].
 
-The amount of light reaching lower canopy, understories and forest floors are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. Forest floors of tropical forests with densely packed overstory trees, receive approximately 1-2% of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute to the light environment of shaded forest regions, in the form of sunflecks. Shaded canopy layers depend on sunflecks where receive 10-80% of their photon flux density for photosynthesis in short bursts within minutes of light exposure [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy in inner canopy is a better proxy for light environment than height (Parker 1995).
+The amount of light reaching lower canopy, understories and forest floors are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. Forest floors of tropical forests with densely packed overstory trees, receive approximately 1-2% of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute to the light environment of shaded forest regions, in the form of sunflecks. Shaded canopy layers depend on sunflecks, where they receive 10-80% of their photon flux density for photosynthesis in short bursts within minutes of light exposure [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995).
 
-These light regimes shape foliage at a vertical gradient, which in turn shapes the microenvironment. At a foliar level, resulting light-adaptation in the form of sun and shade leaf dichotomy also facilitates plant-adaptation to the light environment in the understory and overstory, ultimately contributing to shaping the microenvironment, forest vertical-profile's thermal sensitivity and their response to warming [@michaletzEnergeticCarbonEconomic2016; @fauset_differences_2018; @niinemetsResponsesForestTrees2010; @sackHowStrongIntracanopy2006; @niinemetsControversyTraitsConferring2006] 
+These light regimes shape foliage at a vertical gradient, which in turn shapes the microenvironment. At a foliar level, resulting light-adaptation in the form of sun and shade leaf dichotomy also facilitates plant-adaptation to the light environment in the understory and the overstory, ultimately contributing to shaping the microenvironment, forest vertical-profile's thermal sensitivity and their response to warming  [@fauset_differences_2018; @millerOnlySunlitLeaves2021; @michaletzPlantThermoregulationEnergetics2015; *Defrenne et al. 2021*] 
 
 ### Wind speeds 
-**Wind speeds are also higher at the top of the canopy (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`), owing to... [**REFS**].**
-Across all **#** forested NEON sites, wind speeds increased with height, with daily maximum wind speeds at the top of the averaging up to **#** m s^-1^ higher at the top of the vertical profile than at the bottom. Increase in tree height also contributes to decrease in understory wind-speed [@CanopyStructureTopography]
+**Wind speeds are also higher at the top of the canopy (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`), owing to... [@juckerCanopyStructureTopography2018].**
+Across all **#** forested NEON sites, wind speeds increased with height, with daily maximum wind speeds at the top of the averaging up to **#** m s^-1^ higher at the top of the vertical profile than at the bottom. Understory wind-speed is also substantially reduced with increased canopy height [@juckerCanopyStructureTopography2018]
 Consistent with these results from NEON sites, higher wind speeds at greater heights within a forest canopy have been observed in both closed canopy forests [@barnardSeasonalVariationCanopy2016a; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019].
 
 ### Air temperature 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower daytime maximum temperature and vapor pressure deficit ($VPD$), and warmer higher nighttime minimum temperature in the understory, respectively, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021, @davis_microclimatic_2019, @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with canopy cover [S. R. Hardwick et al. 2015, Junker et al. 2018]. Pine forests, on the other hand, that are open-forests with lower $LAI$ and sparse stands have lower buffering capacity and greater light permeability through canopies, thus maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999]. These pine forests have also been observed to maintain warmer nighttime understory temperatures than above canopy, due to radiative heat loss from the soil, caused by daytime solar radiation [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature. However, beyond a certain height, temperature and VPD offset plateaus [Junker et al. 2018]. At a species level, broadleaf trees with higher shade casting ability also contribute to greater temperature buffering [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a].
+The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021, @davis_microclimatic_2019, @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with canopy cover [S. R. Hardwick et al. 2015, Junker et al. 2018]. Pine forests, on the other hand, that are open-forests with lower $LAI$ and sparse stands have lower buffering capacity and greater light permeability through canopies, thus maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999]. During the night, these pine forests have been observed to maintain warmer understory temperatures than above canopy, due to radiative heat loss from the soil caused by daytime solar radiation [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature. However, beyond a certain height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018]. At a species level, broadleaf trees with higher shade casting ability also contribute to greater temperature buffering [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a].
 
-Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with higher maximum air temperatures and relative humidity in above forest canopies and gaps than in below canopies and understories. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
+Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with higher maximum air temperatures and relative humidity above forest canopies and gaps than in below canopies and understories. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in the upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
-Under colder conditions (?), minimum T_air is also buffered by forest canopies, increasing negetive temperature offset in the understory. Across Europe [@zellweger_seasonal_2019] and in the northwestern United States [@davis_microclimatic_2019] higher minimum temperatures under forest canopies have been observed relative to nearby clearings. Greater radiative heat loss in exposed areas results in lower T_min. However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
+Under colder conditions (?), minimum $T_{air}$ [$T_{min}$] is also buffered by forest canopies, increasing negetive temperature offset in the understory. Across Europe [@zellweger_seasonal_2019; Defrenne et al. 2021] and in the northwestern United States [@davis_microclimatic_2019] higher minimum temperatures under forest canopies have been observed relative to nearby clearings. Greater radiative heat loss in exposed areas results in lower $T_{min}$. However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
 
-Thus, we see that buffering by canopy cover smooths the effect temperature extreme and fluctuation in the understory, thereby exhibiting an understory temperature lag [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020; @rollinsonClimateSensitivityUnderstory]. However, as a result of global rise in temperatures, inevitable increases in understory temperatures are observed. [@bertrandCommentForestMicroclimate2020]
+Thus, we see that buffering by canopy cover smooths the affect temperature extremes and fluctuation in the understory, thereby exhibiting an understory temperature lag [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020; @rollinsonClimateSensitivityUnderstory; Defrenne et al. 2021]. However, as a result of global rise in temperatures, inevitable increases in understory temperatures continue to be observed. [@bertrandCommentForestMicroclimate2020]
 
 *(Add something about risk of freeze.)* 
 
@@ -201,9 +201,9 @@ Given that differences are small during the day when photosynthesis is occurring
 
 ### Geographic and climatic factors
 
-With higher altitude and topography, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. *(do higher altitude forests have lower buffering capacity? due to open canopies?)* In a European silver birch forest, trees in higher altitude maintained open canopies with allowing more light through subsequent canopy layers, resulting in similar leaf traits across canopy positions, than in lower altitude trees [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. Increased light permeability in higher altitude European sparse pine canopies, has also shown to increase understory light conditions along with higher maximum temperatures than lower altitude canopies, thus potentially having implications for seedling recruitment as temperatures rise [@vonarxSpatiotemporalEffectsForest2012a]. Vertical climate gradients are observed to be steeper within forests than those driven by elevation and latitude [@nakamuraForestsTheirCanopies2017; @martinCovarianceSunShade2020a]*what does this mean? can combine above sentences into one(N.V note)* Tree height in combination with topography modifies microclimate conditions. In a Boreneo forest, greater canopy height had a stronger influence on buffering temperature on east facing, wind-exposed slopes than on west-facing slopes.    
+With higher altitude and topography, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. *(do higher altitude forests have lower buffering capacity? due to open canopies?)* In a European silver birch forest, trees in higher altitude maintain open canopies allowing more light through subsequent canopy layers, resulting in similar leaf traits across canopy positions, than in lower altitude trees [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. Increased light permeability in higher altitude European sparse pine canopies, has also shown to increase understory light conditions along with higher maximum temperatures than lower altitude canopies, thus potentially having implications for seedling recruitment as temperatures rise [@vonarxSpatiotemporalEffectsForest2012a]. Vertical climate gradients are observed to be steeper within forests than those driven by elevation and latitude [@nakamuraForestsTheirCanopies2017; @martinCovarianceSunShade2020a]*what does this mean? can combine above sentences into one(N.V note)* Tree height in combination with topography modifies microclimate conditions. In a Boreneo forest, greater canopy height had a stronger influence on buffering temperature on east facing, wind-exposed slopes than on west-facing slopes.    
   
-The strength of buffering also varies with respect to geographic and climatic factors. Distance to coast, topographic position, elevation [@zellweger_seasonal_2019]. Proximity to riparian areas tends to sustain buffering, protecting understory temperatures even during increasing temperature extremes [@davis_microclimatic_2019]
+The strength of buffering also varies with respect to distance to the coast, topographic position, elevation [@zellweger_seasonal_2019]. Proximity to riparian areas tends to sustain buffering, protecting understory temperatures even during increasing temperature extremes [@davis_microclimatic_2019; **REF**]
 
 ## Leaf temperature 
 
@@ -214,7 +214,7 @@ $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated ba
 Leaf traits are influenced by biophysical environment in order to maintain metabolic optima so that the amount of carbon assimilated by a leaf throughout its life span is greater than the total carbon invested in the leaf [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020] 
 The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of radiation input versus heat lost to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
 
-![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus XXX*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
+![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
 **(paragraph on radiation as a driver)**
 Shaded understory leaves should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance. 
@@ -222,7 +222,7 @@ Shaded understory leaves should tend to maintain cooler daytime leaf temperature
 Greater upper canopy wind speeds (Fig. `r fig_NEON_vertical`) result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with wind velocity [@daudetWindSpeedLeaf1999a]. 
 Large $g_{a}$ to heat transfer, in turn, results in a smaller difference between $T_{leaf}$ and $T_{air}$. 
 In low wind conditions, because $g_{a}$ to heat transfer is comparatively small, $T_{leaf}$ in the upper canopy can become substantially elevated in relation to $T_{air}$ under high radiation [@martin_boundary_1999; @leighInfluenceLeafSize2017]. 
-Additionally, the thickness of the air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006] this tends to be greater in the understory than canopy? [ref]
+Additionally, the thickness of the air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006] this tends to be greater in the understory than canopy? [*REF*]
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
 Leaves with open stomata can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, *with coolest leaves at intermediate sizes (~10mm)*. 
@@ -231,7 +231,7 @@ However, increase in air temperature typically also increases VPD, decrease in s
 Thus, their $T_{leaf}$ can be highly elevated above $T_{air}$ when $g_{s}$ or $g_{a}$ is low.
 
 **In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** 
-*Smaller leaves have higher $g_{a}$ to heat transfer, allowing them to dissipate heat more efficiently than larger leaves [@bauerleSeparatingFoliarPhysiology2011]. (verify this statement and reference)* 
+*Smaller leaves have higher $g_{a}$ to heat transfer, allowing them to dissipate heat more efficiently than larger leaves [@bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017].  
 While small leaves remain within a few degrees of $T_{air}$, regardless of stomatal conductance, wider leaves can have temperatures deviating more from air temperature [@fauset_differences_2018]. 
 Large leaves (with greater leaf width) can be significantly cooler than $T_{air}$ under low radiation with stomata open [@leighInfluenceLeafSize2017], and significantly hotter under high radiation with stomata closed. 
 
@@ -282,7 +282,7 @@ For the purposes of interpreting the results presented here, we note that patter
 *(The following notes need to be condensed/ worked into the paragraph above or discussion of specific traits. No need to get very specific (listing species studied, traits)--what we want is generalization. The goal is to answer the question, "Do we expect light gradients to be equivalent to height gradients, or is there variation attributable to height that is not captured by light gradients?")*
 
 
-Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from changes in light availability. However, studies that have measured LMA in relation to height have found that in tropical forests LMA-height predicted stronger correlation between area-based respiration versus foliar nutrients, whereas Q10 and E10 remained constant with height [Cavaleri et al. 2008]. In a temperate Acer saccharum forest, ~~within-canopy Acer saccharum exhibited greater~~LMA and $N_{area}$ were greater with height early in the growing season as a result of hydrostatic constraints on leaf morphology. Later in the growing season, LMA and $N_{area}$ continued to increase in the upper canopy, but due to light driven changes [@cobleLightDrivesVertical2014a; @cobleLightAcclimationOptimizes2015; @cobleHowVerticalPatterns2016]. In addition, carbon isotope composition has also been shown to increase with height, independent of light [@cobleLightAcclimationOptimizes2015]
+Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from changes in light availability. However, studies that have measured LMA in relation to height have found that in tropical forests LMA-height predicted stronger correlation between area-based respiration versus foliar nutrients, whereas Q10 and E10 remained constant with height [Cavaleri et al. 2008]. In a temperate Acer saccharum forest, LMA and $N_{area}$ were greater with height early in the growing season as a result of hydrostatic constraints on leaf morphology. Later in the growing season, LMA and $N_{area}$ continued to increase in the upper canopy, but due to light driven changes [@cobleLightDrivesVertical2014a; @cobleLightAcclimationOptimizes2015; @cobleHowVerticalPatterns2016]. In addition, carbon isotope composition has also been shown to increase with height, independent of light [@cobleLightAcclimationOptimizes2015]
 
 Height-based leaf trait variation in two tall temperate species, *Quercus alba* and *Quercus velutina*, showed decreases in lobation with increased height, suggesting an adaptation to hydraulic constraints in order to lower evapotranspiration with increasing height by decreasing lobation [@kusiPlasticLeafMorphology2020]. However, @sackHowStrongIntracanopy2006 did not observe trait variation based on height in Quercus species.
 
@@ -291,7 +291,7 @@ Height-based leaf trait variation in two tall temperate species, *Quercus alba* 
 - (Cavaleri et al. 2008) 
 - from Martijn: "If I remember correctly, height and light exposure are closely correlated and things like LMA scale with both, but above a certain level of light exposure, the effect of additional light disappears, while the relationship of the morphological traits with height continues. I have often been a bit skeptical about assuming height drives morphology, as most of the work that convincingly shows that (and relates it to turgor pressure for example) is from 100 m tall redwoods."
 - Elsa: see also H. Poorter, U. Niinemets, L. Poorter, I. J. Wright, R. Villar, Causes and consequences of variation in leaf mass per area (LMA): A meta-analysis. New Phytol. 182, 565–588 (2009). -- LMA responds to changes in light, with shade-intolerant species displaying higher plasticity in response to light.
-- Beyond a certain height, height becomes more important than light in determing traits [Ambrose, Sillet, Cavaleri]
+- Beyond a certain height, light becomes less important than height in determing traits [Ambrose, Sillet, Cavaleri]
 
 #### *(clarify intra- vs inter-specific variation - 1 short paragraph)*
 
@@ -329,7 +329,7 @@ nocite: |
 #### Morphological traits
 - Recent paper on influence on leaf size/shape in PCE – certain aspects of leaf shape were not as relevant as expected (Leigh et al. 2017? https://onlinelibrary.wiley.com/doi/full/10.1111/pce.12857)
 
-Leaf temperature is generally assumed to increase with leaf area ($LA$) [ Wright et al. 2019; Tserej & Feeley 2021]. Yet, thermal imagery shows that though leaf area can be a predictor for leaf temperature ranges [$T_{range}$] across the surface of the leaf, effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant [@leighInfluenceLeafSize2017]. With increases in effective leaf width, boundary layer thickness and resistance increase along with stomatal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. This lowers evaporation from stomatal pores, and in turn transpirational cooling in large leaves [@fauset_differences_2018]. Because the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, small leaves are able to dissipate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Using leaf energy balance models to compare leaf temperatures of two species $Miconia$ and $Alchornea$, Fauset et al. 2016 found leaf width to be a dominant factor in determining changes in leaf temperature, which was evidently greater for large width leaves of $Miconia$ compared to $Alchornea$. Leaf width and characteristic dimension are generally greater in shaded leaves along the vertical gradient than exposed upper canopy [ref]. Additionally, leaf characteristics such as lobes, leaf elongation and serration, which break the entirety of leaf dimension by enhancing a smaller characteristic dimension, all facilitate more efficient heat dissipation. Leaf lobes are deeper and leaf elongation and serration are more pronounced in sun exposed canopies than in the shaded understory~~, as well as leaf elongation and serration are more pronounced in sun exposed canopies~~ [@vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006].
+Leaf temperature is generally assumed to increase with leaf area ($LA$) [ Wright et al. 2019; Tserej & Feeley 2021]. Yet, thermal imagery shows that though leaf area can be a predictor for leaf temperature ranges [$T_{range}$] across the surface of the leaf, effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant [@leighInfluenceLeafSize2017]. With increases in effective leaf width, boundary layer thickness and resistance increase along with stomatal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. This lowers evaporation from stomatal pores, and in turn transpirational cooling in large leaves [@fauset_differences_2018]. Because the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, small leaves are able to dissipate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Using leaf energy balance models to compare leaf temperatures of two species $Miconia$ and $Alchornea$, Fauset et al. 2016 found leaf width to be a dominant factor in determining changes in leaf temperature, which was evidently greater for large width leaves of $Miconia$ compared to $Alchornea$. Leaf width and characteristic dimension are generally greater in shaded leaves along the vertical gradient than exposed upper canopy [ref]. Additionally, leaf characteristics such as lobes, leaf elongation and serration, which break the entirety of leaf dimension by enhancing a smaller characteristic dimension, all facilitate more efficient heat dissipation. Leaf lobes are deeper and leaf elongation and serration are more pronounced in sun exposed canopies than in the shaded understory [@vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006].
 
 
 
