--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3006,6 +3006,44 @@
   number = {n/a}
 }
 
+@article{kornerWorldwideStudyHigh2004,
+  title = {A World-Wide Study of High Altitude Treeline Temperatures},
+  author = {Körner, Christian and Paulsen, Jens},
+  date = {2004},
+  journaltitle = {Journal of Biogeography},
+  volume = {31},
+  pages = {713--732},
+  issn = {1365-2699},
+  doi = {10.1111/j.1365-2699.2003.01043.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2699.2003.01043.x},
+  urldate = {2021-04-09},
+  abstract = {Aim At a coarse scale, the treelines of the world's mountains seem to follow a common isotherm, but the evidence for this has been indirect so far. Here we aim at underpinning this with facts. Location We present the results of a data-logging campaign at 46 treeline sites between 68° N and 42° S. Methods We measured root-zone temperatures with an hourly resolution over 1–3 years per site between 1996 and 2003. Results Disregarding taxon-, landuse- or fire-driven tree limits, high altitude climatic treelines are associated with a seasonal mean ground temperature of 6.7 °C (±0.8 SD; 2.2 K amplitude of means for different climatic zones), a surprisingly narrow range. Temperatures are higher (7–8 °C) in the temperate and Mediterranean zone treelines, and are lower in equatorial treelines (5–6 °C) and in the subarctic and boreal zone (6–7 °C). While air temperatures are higher than soil temperatures in warm periods, and are lower than soil temperatures in cold periods, daily means of air and soil temperature are almost the same at 6–7 °C, a physics driven coincidence with the global mean temperature at treeline. The length of the growing season, thermal extremes or thermal sums have no predictive value for treeline altitude on a global scale. Some Mediterranean (Fagus spp.) and temperate South Hemisphere treelines (Nothofagus spp.) and the native treeline in Hawaii (Metrosideros) are located at substantially higher isotherms and represent genus-specific boundaries rather than boundaries of the life-form tree. In seasonal climates, ground temperatures in winter (absolute minima) reflect local snow pack and seem uncritical. Main conclusions The data support the hypothesis of a common thermal threshold for forest growth at high elevation, but also reflect a moderate region and substantial taxonomic influence.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2699.2003.01043.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\X7QLXTPJ\\Körner and Paulsen - 2004 - A world-wide study of high altitude treeline tempe.pdf},
+  keywords = {alpine ecology,Climate,forest limit,growth,mountains,timberline},
+  langid = {english},
+  number = {5}
+}
+
+@article{kornerWorldwideStudyHigh2004a,
+  title = {A World-Wide Study of High Altitude Treeline Temperatures},
+  author = {Körner, Christian and Paulsen, Jens},
+  date = {2004},
+  journaltitle = {Journal of Biogeography},
+  volume = {31},
+  pages = {713--732},
+  issn = {1365-2699},
+  doi = {10.1111/j.1365-2699.2003.01043.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2699.2003.01043.x},
+  urldate = {2021-04-09},
+  abstract = {Aim At a coarse scale, the treelines of the world's mountains seem to follow a common isotherm, but the evidence for this has been indirect so far. Here we aim at underpinning this with facts. Location We present the results of a data-logging campaign at 46 treeline sites between 68° N and 42° S. Methods We measured root-zone temperatures with an hourly resolution over 1–3 years per site between 1996 and 2003. Results Disregarding taxon-, landuse- or fire-driven tree limits, high altitude climatic treelines are associated with a seasonal mean ground temperature of 6.7 °C (±0.8 SD; 2.2 K amplitude of means for different climatic zones), a surprisingly narrow range. Temperatures are higher (7–8 °C) in the temperate and Mediterranean zone treelines, and are lower in equatorial treelines (5–6 °C) and in the subarctic and boreal zone (6–7 °C). While air temperatures are higher than soil temperatures in warm periods, and are lower than soil temperatures in cold periods, daily means of air and soil temperature are almost the same at 6–7 °C, a physics driven coincidence with the global mean temperature at treeline. The length of the growing season, thermal extremes or thermal sums have no predictive value for treeline altitude on a global scale. Some Mediterranean (Fagus spp.) and temperate South Hemisphere treelines (Nothofagus spp.) and the native treeline in Hawaii (Metrosideros) are located at substantially higher isotherms and represent genus-specific boundaries rather than boundaries of the life-form tree. In seasonal climates, ground temperatures in winter (absolute minima) reflect local snow pack and seem uncritical. Main conclusions The data support the hypothesis of a common thermal threshold for forest growth at high elevation, but also reflect a moderate region and substantial taxonomic influence.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2699.2003.01043.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\36EZGSM6\\Körner and Paulsen - 2004 - A world-wide study of high altitude treeline tempe.pdf;C\:\\Users\\Me\\Zotero\\storage\\H8KLQHZQ\\j.1365-2699.2003.01043.html},
+  keywords = {alpine ecology,Climate,forest limit,growth,mountains,timberline},
+  langid = {english},
+  number = {5}
+}
+
 @article{kosugiSeasonalFluctuationsTemperature2006,
   title = {Seasonal Fluctuations and Temperature Dependence of Leaf Gas Exchange Parameters of Co-Occurring Evergreen and Deciduous Trees in a Temperate Broad-Leaved Forest},
   author = {Kosugi, Y. and Matsuo, N.},
@@ -3403,6 +3441,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\LHJVBFWA\\Lewis et al. - 2000 - Vertical gradients in photosynthetic light respons.pdf},
   langid = {english},
   number = {7}
+}
+
+@article{liangForestTypeHeight2019,
+  title = {Forest Type and Height Are Important in Shaping the Altitudinal Change of Radial Growth Response to Climate Change},
+  author = {Liang, Penghong and Wang, Xiangping and Sun, Han and Fan, Yanwen and Wu, Yulian and Lin, Xin and Chang, Jinfeng},
+  date = {2019-02-04},
+  journaltitle = {Scientific Reports},
+  volume = {9},
+  pages = {1336},
+  publisher = {{Nature Publishing Group}},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-018-37823-w},
+  url = {https://www.nature.com/articles/s41598-018-37823-w},
+  urldate = {2021-04-09},
+  abstract = {Tree radial growth is widely found to respond differently to climate change across altitudinal gradients, but the relative roles of biotic factors (e.g. forest type, height and density) vs. climate gradient remain unclear. We sampled tree rings from 15 plots along a large altitudinal gradient in northeast China, and examined how climate gradient, forest type, height, tree size and density affect: (1) temporal growth variability [mean sensitivity (MS) and standard deviation (SD) of the chronologies], and (2) the relationship of ring width indices (RWI) with historical climate. We used BIC based model selection and variable importance to explore the major drivers of their altitudinal patterns. The results showed that: both growth variability and RWI-climate relationships changed significantly with altitude. Forest height was the most important predictor for altitudinal changes of MS and SD. For RWI-climate relationships, forest type was more important than climate gradient, while height and stem density were weak but necessary predictors. We showed that the altitudinal difference in growth response to climate change cannot be explained by climate gradient alone, and highlight the necessity to examine the influence of biotic factors (which covary with climate across geographic gradient) to better understand forest response to climate change.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\H2BIKEE5\\Liang et al. - 2019 - Forest type and height are important in shaping th.pdf},
+  issue = {1},
+  langid = {english},
+  number = {1}
 }
 
 @article{liberatiPRISMAStatementReporting2009,
