--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -201,9 +201,7 @@ Given that differences are small during the day when photosynthesis is occurring
 
 ### Geographic and climatic factors
 
-With higher altitude and topography, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. *(do higher altitude forests have lower buffering capacity? due to open canopies?)* In a European silver birch forest, trees in higher altitude maintain open canopies allowing more light through subsequent canopy layers, resulting in similar leaf traits across canopy positions, than in lower altitude trees [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. Increased light permeability in higher altitude European sparse pine canopies, has also shown to increase understory light conditions along with higher maximum temperatures than lower altitude canopies, thus potentially having implications for seedling recruitment as temperatures rise [@vonarxSpatiotemporalEffectsForest2012a]. Vertical climate gradients are observed to be steeper within forests than those driven by elevation and latitude [@nakamuraForestsTheirCanopies2017; @martinCovarianceSunShade2020a]*what does this mean? can combine above sentences into one(N.V note)* Tree height in combination with topography modifies microclimate conditions. In a Boreneo forest, greater canopy height had a stronger influence on buffering temperature on east facing, wind-exposed slopes than on west-facing slopes.    
-  
-The strength of buffering also varies with respect to distance to the coast, topographic position, elevation [@zellweger_seasonal_2019]. Proximity to riparian areas tends to sustain buffering, protecting understory temperatures even during increasing temperature extremes [@davis_microclimatic_2019; **REF**]
+With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In European forests, buffering capacity is stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a]. Trees in European high altitude forests have been shown to maintain sparser stands [@vonarxSpatiotemporalEffectsForest2012a] and open canopies with greater light interception through canopy layers, and therefore to the understory [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. While increase in tree height (in closed-forests) increases buffering in the understory [@juckerCanopyStructureTopography2018], in timberline and temperate mountain forests in China, tree height decreased with altitude, where as tree growth sensitivity (based on tree-rings) to climate change increased. Decrease in temperature altitudinally associated with increased relative humidity [Liang et al. 2019] and understory light interception might have implications to photosynthetic functioning [Sellin et al. 2013], and high altitude pine forest regeneration [@vonarxSpatiotemporalEffectsForest2012a]. *Vertical climate gradients are observed to be steeper within forests than those driven by elevation and latitude [@nakamuraForestsTheirCanopies2017; @martinCovarianceSunShade2020a] what does this mean? can combine above sentences into one(N.V note)* The strength of buffering also varies with respect to distance to the coast, topographic position, elevation [@zellweger_seasonal_2019]. Proximity to riparian areas tends to sustain buffering, protecting understory temperatures even during increasing temperature extremes [@davis_microclimatic_2019; **REF**]
 
 ## Leaf temperature 
 
